# Efficient_Trotterizations

./: .gitignore  LICENSE  NOTICE.md  README.md
Code/: Efficient_Trotterizations.nb  Manifold_q4.nb
Code/Manifolds/cycles_q2/: Manifold_q2.nb
Code/Manifolds/cycles_q4/: Manifold_q4.nb
Code/Manifolds/cycles_q5/: Manifold_q5.nb
Code/Manifolds/cycles_q6/: Manifold_q6.nb
Code/Recursive_formulae/: Efficient_Trotterizations.nb  Recursive_formulae.tex
Code/Time_Evolution/: CMakeLists.txt  README-Heisenberg.md  README-Symplectic.md  Symplectic_evolution.py  build-run_instructions.txt
Code/Time_Evolution/Input_files/Errors/Harmonic/: template.in
Code/Time_Evolution/Input_files/Errors/Harmonic/tests/: template_q10_Blanes10.in  template_q14.in  template_q4.in  template_q5.in  template_q5_Suzuki.in  template_q6.in  template_q6_Blanes6.in
Code/Time_Evolution/Input_files/Errors/Heisenberg/Operator/: errors_opL_q1.in  errors_opL_q2.in  errors_opL_q3.in  errors_opL_q4.in
Code/Time_Evolution/Input_files/Errors/Heisenberg/State/tests/: template_q1.in  template_q10.in  template_q14.in  template_q2.in  template_q3.in  template_q4.in  template_q5.in  template_q6.in
Code/Time_Evolution/Input_files/Evolution/Heisenberg/Exact/: evolve_exact.in
Code/Time_Evolution/Input_files/Evolution/Heisenberg/Trotter/: evolve_trotterG_q1.in  evolve_trotterL_q1.in
Code/Time_Evolution/include/: Exact.h  InOut.h  Model.h  Operators.h  Trotter.h
Code/Time_Evolution/src/: Exact.cpp  InOut.cpp  Model.cpp  Trotter.cpp  main.cpp
Code/Trotter-Suzuki_schemes/: CMakeLists.txt  README-Trotter.md  build-run_instructions.txt
Code/Trotter-Suzuki_schemes/Data/: README-Schemes.md
Code/Trotter-Suzuki_schemes/include/: Coefficients.h  IO.h  Metadata.h  Minim_helpers.h  Minimization.h  Multinomial.h  NCoefficients.h  NMinimization.h  NScheme.h  Powers.h  Prefactors.h  Scheme.h  Tensor.h
Code/Trotter-Suzuki_schemes/src/: Coefficients.cpp  IO.cpp  Metadata.cpp  Minim_helpers.cpp  Minimization.cpp  Powers.cpp  (+8 more)
(+229 files in other folders)
